@@ -343,4 +343,8 @@ install-contrib-modules: create-dirs
 	install -m 754 contrib/init.d/modules ${EXTDIR}/rc.d/init.d
 	ln -s  ../init.d/modules ${EXTDIR}/rc.d/rcsysinit.d/S15modules
 
-.PHONY: install install-service-dhclient install-service-dhcpcd install-service-ipx install-service-pppoe install-alsa install-apache install-bind install-cups install-dhcp install-exim install-fcron install-gdm install-gpm install-lprng install-mysql install-netfs install-nfs-client install-nfs-server install-ntp install-portmap install-postfix install-postgresql install-proftpd install-random install-rsync install-samba install-sendmail install-sshd install-xinetd
+install-contrib-udev: create-dirs
+	install -m 754 contrib/init.d/udev ${EXTDIR}/rc.d/init.d
+	ln -s  ../init.d/udev ${EXTDIR}/rc.d/rcsysinit.d/S10udev
+
+.PHONY: install install-service-dhclient install-service-dhcpcd install-service-ipx install-service-pppoe install-alsa install-apache install-bind install-cups install-dhcp install-exim install-fcron install-gdm install-gpm install-lprng install-mysql install-netfs install-nfs-client install-nfs-server install-ntp install-portmap install-postfix install-postgresql install-proftpd install-random install-rsync install-samba install-sendmail install-sshd install-xinetd install-contrib-modules install-contrib-udev
